--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "next": "15.1.3",
+    "prettier": "^3.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-draggable": "^4.4.6",
     "react-player": "^2.16.0",
     "socket.io-client": "^4.8.1"
   },
