--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@react-oauth/google": "^0.12.1",
+    "jwt-decode": "^4.0.0",
+    "lottie-react": "^2.4.1",
     "next": "15.1.3",
     "prettier": "^3.5.2",
     "react": "^19.0.0",
